--- a/assets/theme-styles/scss/sections/_universal.scss
+++ b/assets/theme-styles/scss/sections/_universal.scss
@@ -147,7 +147,7 @@ textarea {
 
 .section-sub {
     text-align: center;
-    color: var(--excerpt);
+    color: #999999;
     width: 100%;
     margin: 0 auto;
     line-height: 1.5em;
