--- a/assets/theme-styles/scss/sections/_navigation.scss
+++ b/assets/theme-styles/scss/sections/_navigation.scss
@@ -14,6 +14,7 @@
 		color: var(--accent);
 		padding: 0.5em 1em;
 	}
+	
 	@media (min-width: 992px) {
 		ul#primary-menu {
 			& > li {
@@ -69,8 +70,12 @@
 				opacity: 1;
 				left: auto;
 				@include transform( translateY(0px) );
+
 			}
 		}
+	}
+	.sub-menu{
+		border-radius: 4px;
 	}
 }
 
