--- a/assets/theme-styles/scss/layouts/_col.scss
+++ b/assets/theme-styles/scss/layouts/_col.scss
@@ -1,5 +1,6 @@
 article.type-post, article.type-page {
-    margin-bottom: 1.8em;
+    margin-bottom: 3rem;
+    
     &[class^='col-'] {
         .listing-wrapper {
             flex-direction: column;
