--- a/assets/theme-styles/scss/sections/_footer.scss
+++ b/assets/theme-styles/scss/sections/_footer.scss
@@ -3,15 +3,19 @@
 #footer-sidebar {
     background-color: var(--dark);
     padding-top: 3em;
+    margin-top: 2rem;
     color: white;
+
     a {
         color: white;
         text-decoration: underline;
     }
+
     caption {
         color: white;
     }
-    @media (max-width: 767px) {
+    
+    @media (max-width: 48rem) {
         text-align: center;
     }
 }
@@ -19,6 +23,7 @@
 #colophon {
     background-color: var(--dark);
     color: white;
+    text-align: center;
     a {
         color: white;
         text-decoration: underline;
