--- a/assets/theme-styles/scss/sections/_init.sections.scss
+++ b/assets/theme-styles/scss/sections/_init.sections.scss
@@ -1,6 +1,7 @@
 //Import Section Modules
 
 @import 'universal';
+@import 'archive';
 @import 'header';
 @import 'navigation';
 @import 'widgets';
@@ -9,10 +10,5 @@
 @import 'footer';
 @import 'filter';
 @import 'property';
-@import 'featured.types';
-@import 'featured.property';
-@import 'featured.locations';
-@import 'agents';
-@import 'testimonials';
 @import 'contact.form';
 @import 'pagination';
