--- a/assets/theme-styles/scss/admin.scss
+++ b/assets/theme-styles/scss/admin.scss
@@ -114,8 +114,6 @@ button.def-btn {
 		flex-wrap: wrap;
         & > * {
             box-sizing: border-box;
-            padding-left: 15px;
-            padding-right: 15px;
             display: inline-block;
         }
     }
@@ -137,12 +135,24 @@ button.def-btn {
 }
 
 #itre-admin-theme-info {
-    margin-right: 6em;
+    margin-right: 6rem;
+    padding-right: 0.9375rem;
+    padding-left: 0.9375rem;
+
     span {
         color: var(--accent);
+
 		&.dashicons-star-filled {
 			color: #fec11b;
 		}
+    }
+
+    h2 {
+        font-size: 1rem;
+
+        @media (min-width: 48rem) {
+            font-size: 1.5rem;
+        }
     }
 }
 .itre-theme-demos {
@@ -152,8 +162,6 @@ button.def-btn {
         position: relative;
         box-sizing:border-box;
 		margin: 0;
-        padding-left: 15px;
-        padding-right: 15px;
         padding-bottom: 2.8em;
         img {
             width: 100%;
@@ -194,6 +202,32 @@ button.def-btn {
 	padding: 1em 0 !important;
 }
 
+table.compare {
+    width: 100%;
+    max-width: 60rem;
+    border-collapse: collapse;
+    font-size: 1.125rem;
+    margin-bottom: 4rem;
+
+    th, td {
+        padding: 0.75rem 1.25rem;
+        text-align: center;
+    }
+
+    tr:nth-child(even) {
+        background-color: white;
+    }
+
+    tr:nth-child(odd) {
+        background-color: #f5f5f5;
+    }
+
+    tr:first-child {
+        background-color: #346d85;
+        color: white;
+    }
+}
+
 .theme-pro {
 	figure {
 		margin: 0;
@@ -207,10 +241,10 @@ button.def-btn {
 		}
 	}
 	.upsell-links {
-		margin-top: 1.6em;
+		margin-top: 1.625rem;
 		a {
-			font-size: 1.6em !important;
-			margin-right: 0.4em;
+			font-size: 1.25rem !important;
+			margin-right: 0.375rem;
 			&:last-child {
 				margin-right: 0;
 			}
@@ -228,11 +262,17 @@ button.def-btn {
 }
 
 li#menu-appearance {
+
     ul {
-        > li a[href*="itre_options"]{
+        
+        > li a[href="themes.php?page=itre_options"]{
             color: #3b9dc5;
-            &:hover {
+            font-weight: 700;
+            &:hover,
+            &:active,
+            &.current {
                 color: #3b9dc5;
+                background-color: rgba(0,0,0,0.2);
             }
         }
     }
