--- a/assets/theme-styles/scss/sections/_filter.scss
+++ b/assets/theme-styles/scss/sections/_filter.scss
@@ -3,16 +3,18 @@
 	position: relative;
 	background-color: var(--accent);
 	border-radius: var(--border-radius);
-	padding-top: 1.2em;
-	padding-bottom: 1.2em;
-	margin-top: -3.35em;
-	margin-bottom: 2em;
-	box-shadow: $shadow4;
-	@media (min-width: 768px) {
-		width: 75%;
+	padding: 1.25rem;
+	box-shadow: 0 14px 28px rgba(0, 0, 0, 0.2);
+
+	body.page-template-template-property-listings & {
+		margin-top: -3.5rem;
+	}
+
+	@media (min-width: 48rem) {
 		margin-left: auto;
 		margin-right: auto;
 	}
+
 	select, input, button {
 		height: 100%;
 		width: 100%;
@@ -22,7 +24,7 @@
 	select {
 		background-color: white;
 	}
-	@media (max-width: 767px) {
+	@media (max-width: 48rem) {
 		button {
 			margin-top: 4px;
 		}
@@ -33,75 +35,161 @@
 	}
 }
 
+.itre-for-tag {
+	color: white;
+	line-height: 1;
+	padding: 0.4em 0.4em 0.2em;
+	text-transform: uppercase;
+	border-radius: 3px;
+	font-size: 0.85em;
+	&.sale {
+		background-color: rgba(121,217,18,0.8);
+	}
+	&.rent {
+		background-color: rgba(229,209,23,0.8);
+	}
+	&.sold {
+		background-color: rgba(41,162,204,0.8);
+	}
+	&.coming-soon {
+		background-color: rgba(92,21,119,0.8);
+	}
+	&.active {
+		background-color: rgba(162,54,198, 0.8);
+	}
+}
+
+.itre-property-listing {
+	margin-top: 2rem;
+	display: grid;
+	gap: 1.5rem;
+
+	@media (min-width: 48rem) {
+		grid-template-columns: 1fr 1fr;
+	}
+
+	@media (min-width: 64rem) {
+		grid-template-columns: repeat(3, 1fr);
+	}
+}
+
 body:not(.single-property) article.type-property {
-	margin-bottom: 1.6em;
-	.listing-wrapper {
-		display: flex;
-		flex-direction: column;
-		height: 100%;
-		border-radius: var(--border-radius);
-		box-shadow: $shadow1;
-		background-color: white;
-		overflow: hidden;
-		.itre-for-tag {
-			position: absolute;
-			color: white;
-			line-height: 1;
-			padding: 0.6em 0.8em 0.4em;
-			text-transform: uppercase;
-			font-size: 0.85em;
-			left: 1.2em;
-			top: 0em;
-			&.sale {
-				background-color: rgba(121,217,18,0.8);
-			}
-			&.rent {
-				background-color: rgba(228,171,48,0.8);
+
+	.itre_address {
+		color: #999999;
+		font-size: 1rem;
+		line-height: 1.375rem;
+		white-space: pre-wrap;
+		margin-top: 0.625rem;
+	}
+	.itre_features {
+		margin-top: auto;
+		border-top: solid 1px #eeeeee;
+		padding-top: 0.625rem;
+		padding-bottom: 0.75rem;
+		font-size: 0.875rem;
+		i {
+			color: var(--accent);
+		}
+		svg {
+			vertical-align: baseline;
+			> * {
+			   fill: var(--accent);
+		   }
+		}
+		> span {
+			margin-right: 0.625rem;
+			span {
+				margin: auto 0.25rem;
 			}
 		}
-		.itre-prop-thumb {
-			position: relative;
-			.prop-price {
+	}
+
+	.itre-for-tag {
+		position: absolute;
+		left: 0.625rem;
+		top: 0.625rem;
+	}
+
+	&.grid {
+		margin-bottom: 1.6em;
+
+		.listing-wrapper {
+			display: flex;
+			flex-direction: column;
+			height: 100%;
+			border-radius: var(--border-radius);
+			box-shadow: $shadow1;
+			background-color: white;
+			overflow: hidden;
+			.itre-prop-thumb {
+				position: relative;
+				.prop-price {
+					position: absolute;
+					bottom: 0;
+					left: 0;
+					color: white;
+					background-color: var(--accent);
+					font-weight: var(--bold);
+					font-size: 1.2em;
+					padding: 0.4em 0.75em 0.3em;
+					opacity: 0.85;
+				}
+			}
+			> *:not(.itre-prop-thumb) {
+				padding: 0 1rem;
+				line-height: 1.2;
+			}
+
+			> *:nth-last-child(2) {
+				margin-bottom: 2.5rem;
+			}
+			h2 {
+				margin: 0.875rem auto 0.25rem;
+				font-size: 1.75rem;
+				line-height: 2rem;
+			    @extend %regular;
+			}
+			a {
+				color: black;
+			}
+			.itre_features {
+				border-top: solid 1px #eeeeee;
+				padding-top: 0.6em;
+				padding-bottom: 0.8em;
+				i {
+					color: var(--accent);
+				}
+				> span {
+					margin-right: 0.6em;
+					span {
+						margin: auto 0.25em;
+					}
+				}
+			}
+		}
+		&.property-tab {
+			.entry-header {
 				position: absolute;
 				bottom: 0;
-				left: 0;
+				width: 100%;
+				padding-top: 2em;
+				padding-bottom: 0.8em;
+			}
+			.listing-wrapper {
+				position: relative;
+				height: auto;
+			}
+			.itre-for-tag {
+				left: unset;
+				right: 0.6em;
+			}
+			.prop-price {
+				bottom: unset !important;
+				top: 0;
+			}
+			h2 {
 				color: white;
-				background-color: var(--accent);
-				font-weight: var(--bold);
-				font-size: 1.2em;
-				padding: 0.4em 0.75em 0.3em;
-				opacity: 0.85;
-			}
-		}
-		> *:not(.itre-prop-thumb) {
-			padding: 0 15px;
-			line-height: 1.2;
-		}
-		h2 {
-			@extend %regular;
-			margin: 0.4em auto 0.24em;
-			font-size: 1.5em;
-		}
-		a {
-			color: black;
-		}
-		.itre_address {
-			color: #555555;
-			padding-bottom: 0.8em;
-		}
-		.itre_features {
-			margin-top: auto;
-			border-top: solid 1px #eeeeee;
-			padding-top: 0.6em;
-			padding-bottom: 0.8em;
-			i {
-				color: var(--accent);
-			}
-			> span {
-				margin-right: 0.6em;
-				span {
-					margin: auto 0.25em;
-				}
 			}
 		}
 	}
