--- a/assets/theme-styles/scss/sections/_single.scss
+++ b/assets/theme-styles/scss/sections/_single.scss
@@ -1,7 +1,34 @@
 // Styling of Single Post Pages
 
 body.single {
+
+    #content {
+        // padding-right: 0.9375rem;
+        // padding-left: 0.9375rem;
+
+        // @media (min-width: 64rem) {
+        //     display: flex;
+        //     justify-content: space-between;
+        // }
+
+        // @media (min-width: 48rem) {
+
+        //     > *:first-child {
+        //         margin-left: -0.9375rem;
+        //     }
+    
+        //     > *:last-child {
+        //         margin-right: -0.9375rem;
+        //     }
+        // }
+    }
+
+    #primary {
+        width: 100%;
+    }
+    
     .entry-content {
+
         a {
             @extend %underline;
         }
@@ -30,16 +57,15 @@ body.single {
         }
     }
     #author_box {
-        background-color: #f5f5f5;
-		padding: 1em;
+        border-top: solid 1px black;
+        padding-top: 1rem;
         margin-bottom: 1em;
         .author_bio {
             line-height: 1.2rem;
         }
         img {
-            width:  calc( 100% - 15px );
             display: inline-block;
-            border-radius: var(--border-radius);
+            border-radius: 50%;
         }
 	}
 }
