--- a/assets/theme-styles/scss/sections/_universal.scss
+++ b/assets/theme-styles/scss/sections/_universal.scss
@@ -141,7 +141,7 @@ textarea {
 
 .section-title {
     text-align: center;
-    font-size: 2.3rem;
+    font-size: 2.25rem;
     margin-bottom: 0;
 }
 
@@ -157,16 +157,37 @@ textarea {
 }
 
 .section-top {
-    margin-bottom: 1.2em;
+    margin-bottom: 1.25rem;
 }
 
 #content {
     position: relative;
     z-index: 1;
-    body:not(.page-template-template-property-front) {
+
+    body:not(.page-template-template-property-listings) & {
         padding-top: 2em;
+
         &.box {
             background-color: white;
+        }
+    }
+
+    body.has-sidebar & {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-between;
+        padding-left: 0.9375rem;
+        padding-right: 0.9375rem;
+        max-width: 82.5rem;
+        margin-left: auto;
+        margin-right: auto;
+
+        > *:first-child {
+            margin-left: -0.9375rem;
+        }
+
+        > *:last-child {
+            margin-right: -0.9375rem;
         }
     }
 }
